Added the nwe put endpoint and some e2e tests
