# routes/documents.routes.js
@@ -7,5 +7,6 @@ routes.get('/', DocumentsController.getDocumentsFromTable);
 routes.get('/:documentId', DocumentsController.getDocumentFromTable);
 routes.post('', DocumentsController.addDocumentToTable);
 routes.delete('/:documentId', DocumentsController.deleteDocumentFromTable);
+routes.put('/:documentId', DocumentsController.updateDocumentInTable);
 
 module.exports = routes;
